# SCX

./: .gitignore  ATTACK_SURFACE.md  AUDIT_STATUS.md  DEVELOPMENT_LOG.md  HANDOFF.md  IP_NOTE.md  LLM_TODO.md  PAPER_SCRIPT_INDEX.md  README.md  SCX_TEMPLATE.md  SCX_TEMPLATE.tex  _arxiv_batch_compile.sh  _arxiv_fix_batch1.sh  _arxiv_fix_batch2.pl  _arxiv_fix_batch2.py  _arxiv_fix_batch2_final.pl  _arxiv_fix_batch3.pl  _arxiv_fix_batch3.py  _arxiv_fix_batch3.sh  _arxiv_fix_blanklines.sh  _arxiv_fix_braket.pl  _arxiv_fix_fontspec.sh  _arxiv_sample_compile.sh  _check_cjk.py  _check_cn.py  _check_enc.py  _check_git.py  _check_git2.py  _cjk_check.py  _clean2.pl  _clean_tex.pl  _count_cn.py  _final.py  _find_chinese.py  _find_remaining.py  _fix_fw.py  _fix_mechanical.py  _fix_thm.pl  _proc_tex.py  _process_files.py  (+68 more)
CodexKnowledge/: SCX_TODO.md  SCX_TODO_2026-06-26.md  SCX_发展史与成就.md  SCX_思想扩展_综合方案.md  SCX_终极TODO.md  SCX_通用模块化架构设计.md  START_HERE_CODEX.md  决策日志.md  后续任务.md  整理_IP保护与开源策略与商业模式.md  整理_LLM战略与发展路线图.md  整理_框架与模块与论文分布.md  新建会话_AI恢复prompt_2026-06-25.md  新建文本文档 (2).txt
_arxiv_template/: ISSUES.md  README.md  template.tex
_tools/: check_nonascii.py  (+3 more)
drug-module/: RUN_GUIDE.md  pyproject.toml
drug-module/configs/: dti_pipeline_demo.yaml
drug-module/outputs/hiv_drug_audit/: hiv_data_quality_report_20260628_140512.json  hiv_expert_verdicts_20260628_140512.csv  hiv_full_audit_20260628_140512.json  hiv_gatekeeper_state_20260628_140512.json  hiv_prioritized_candidates_20260628_140512.csv  hiv_watchlist_20260628_140512.csv
drug-module/scripts/: download_databases.py  hiv_drug_audit.py  prepare_inputs.py  screen_all_databases.py
drug-module/src/scx_drug/: kernel.py  pipeline.py
drug-module/src/scx_drug/operators/: __init__.py  base.py  descriptors.py  drugbank.py  dti.py  mol_featurizer.py
(+1593 files in other folders)
