[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "scx"
version = "0.1.0"
description = "SCX: State-Conditioned eXpertise"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "plotly>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
