[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scx-drug"
version = "0.2.0"
description = "SCX Drug — molecular computation module for drug-target interaction prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SCX Platform Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
rdkit = ["rdkit>=2023.03"]
torch = ["torch>=2.0"]
graphdta = ["torch>=2.0", "torch-geometric>=2.3", "rdkit>=2023.03"]
full = ["rdkit>=2023.03", "torch>=2.0", "torch-geometric>=2.3", "duckdb>=0.9"]

[project.scripts]
scx-drug = "scx_drug.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
